# roi-project-planner-ai

./: README.md  pyproject.toml
.github/workflows/: build-and-test.yaml
src/: ai_model.py  api_client.py  data_preprocessing.py  main.py
tests/: test_ai_model.py  test_data_preprocessing.py
